--- a/src/main/resources/templates/reviews/member-review.html
+++ b/src/main/resources/templates/reviews/member-review.html
@@ -35,7 +35,7 @@
 
         </div>
 
-        <div th:if="${#lists.size(memberReviewList) } == 0" class="no-dto-comment">作成したレビューがありません。</div>
+        <div th:if="${#lists.size(memberReviewList) } == 0" class="no-dto-comment">レビュー履歴がありません。</div>
 
 
     <div class="review__page" th:if="${#lists.size(memberReviewList) } > 0">
