--- a/src/main/resources/templates/carts/member-cart-list-test.html
+++ b/src/main/resources/templates/carts/member-cart-list-test.html
@@ -4,21 +4,21 @@
     <meta charset="UTF-8">
     <div th:remove="tag" th:replace="~{fragments/head :: head} "></div>
     <script defer src="/js/member-updatecart.js"></script>
-    <title>회원 장바구니 조회</title>
+    <title>カート照会</title>
 </head>
 <body>
 <header th:replace="~{fragments/login-header :: header}"></header>
 <!--비어있을 때-->
 <div th:if="${cartDTOList.size()} == 0 or ${cartDTOList} == null">
     <main class="main__container section">
-     <h1 class="main__title">장바구니</h1>
-        <h2>장바구니가 비어있습니다.</h2>
+     <h1 class="main__title">カート</h1>
+        <h2>カートに商品が登録されてありません。</h2>
     </main>
 </div>
 <!--비어있지 않을 때-->
 <div th:if="${cartDTOList.size()} > 0">
 <main class="main__container section">
-    <h1 class="main__title">장바구니</h1>
+    <h1 class="main__title">カート</h1>
     <table class="table__client table--2">
         <thead>
            <tr>
@@ -28,8 +28,8 @@
                           type = "checkbox" checked>
                </th>
                <th colspan="2" style="text-align: center">商品名</th>
-               <th class="cart__price">상품 가격</th>
-               <th class="cart__quantity" style="text-align: center">수량</th>
+               <th class="cart__price">商品価格</th>
+               <th class="cart__quantity" style="text-align: center">数量</th>
                <th class="cart__btn"></th>
            </tr>
         </thead>
@@ -53,7 +53,7 @@
                      <input th:id="'itemNo_' + ${cartIndex.index}" th:value ="${cartDTO.itemNo}" style="display:none;">
                  </td>
                  <input th:id = "'itemPrice_' + ${cartIndex.index}" th:value="${cartDTO.itemPrice}" style="display:none;">
-                 <td class="cart__price" th:text="${cartDTO.itemPrice} + '원'"></td>
+                 <td class="cart__price" th:text="${cartDTO.itemPrice} + 'ウォン'"></td>
                  <td class="cart__quantity">
                      <div class="item__countbtns item__countbtns--cart">
                          <button
@@ -96,7 +96,7 @@
                              th:index = "${cartIndex.index}"
                              th:cartNo = "${cartDTO.cartNo}"
                              th:memberNo = "${cartDTO.memberNo}"
-                             th:onclick="deleteCart(this.getAttribute('index'), this.getAttribute('cartNo'), this.getAttribute('memberNo'))"></button>
+                             th:onclick="deleteCart(this.getAttribute('index'), this.getAttribute('cartNo'), this.getAttribute('memberNo'))">削除</button>
                  </td>
              </tr>
         </div>
@@ -104,9 +104,9 @@
     </table>
     <div class="cart-order__price">
         <h4>
-            <span>상품 총액: </span>
+            <span>商品総額: </span>
             <span id="priceSum">0</span>
-            <span>원</span>
+            <span>ウォン</span>
         </h4>
         <h4>
             <span>注文総額: </span>
