--- a/src/main/resources/templates/carts/nonmember-cart-list-test.html
+++ b/src/main/resources/templates/carts/nonmember-cart-list-test.html
@@ -4,22 +4,21 @@
     <meta charset="UTF-8">
     <div th:remove="tag" th:replace="~{fragments/head :: head} "></div>
     <script defer src="/js/nonmember-updatecart.js"></script>
-    <!--<script defer src="/js/nonmember-getjsondata.js"></script>-->
-    <title>비회원 장바구니 조회</title>
+    <title>カート照会</title>
 </head>
 <body>
 <header th:replace="~{fragments/header :: header}"></header>
 <!--비어있을 때-->
 <div th:if="${session.nonmemberCartList == null}">
     <main class="main__container section">
-     <h1 class="main__title">장바구니</h1>
-        <h2>장바구니가 비어있습니다.</h2>
+     <h1 class="main__title">カート</h1>
+        <h2>カートに商品が登録されてありません。</h2>
     </main>
 </div>
 <!--비어있지 않을 때-->
 <div th:if="${session.nonmemberCartList != null}">
 <main class="main__container section">
-    <h1 class="main__title">장바구니</h1>
+    <h1 class="main__title">カート</h1>
     <table class="table__client table--2">
         <thead>
         <tr>
@@ -30,8 +29,8 @@
                     id = "cartListAllCheckBtn"
                     onclick="toggleAllCartCheckbox('cartCheckboxes')"/></th>
             <th colspan="2" style="text-align: center">商品名</th>
-            <th class="cart__price">상품 가격</th>
-            <th class="cart__quantity" style="text-align: center">수량</th>
+            <th class="cart__price">商品価格</th>
+            <th class="cart__quantity" style="text-align: center">数量</th>
             <th class="cart__btn"></th>
         </tr>
         </thead>
@@ -56,7 +55,7 @@
                 <span th:id="'itemSize_' + ${Index.index}" th:text="${nonMemberCartDTO.itemSize}"></span>
             </td>
             <input th:id = "'itemPrice_' + ${Index.index}" th:value="${nonMemberCartDTO.itemPrice}" style="display:none;">
-            <td class="cart__price" th:text="${nonMemberCartDTO.itemPrice} + '원'"></td>
+            <td class="cart__price" th:text="${nonMemberCartDTO.itemPrice} + 'ウォン'"></td>
             <td class="cart__quantity">
                 <div class="item__countbtns item__countbtns--cart">
                     <button type = "button" class="btn btn--xs btn--white btn--item-cart"
@@ -75,7 +74,7 @@
                         th:id = "'deleteBtn_' + ${nonMemberCartDTO.cartNo}"
                         th:cartIndex = "${Index.index}"
                         th:onclick= "sendCartDeleteJson(this.getAttribute('cartIndex'))"
-                ></button>
+                >削除</button>
             </td>
         </tr>
         </div>
@@ -83,16 +82,16 @@
     </table>
     <div class="cart-order__price">
         <h4>
-            <span>상품 총액:</span>
-            <span id = "priceSum">0</span>
-            <span>원</span>
+            <span>商品総額: </span>
+            <span id=" priceSum">0</span>
+            <span>ウォン</span>
         </h4>
         <h4>
-            <span>주문 총액:</span>
-            <span id = "orderSum">0</span>
-            <span>원</span>
+            <span>注文総額: </span>
+            <span id=" orderSum">0</span>
+            <span>ウォン</span>
         </h4>
-        <span class="cart__delivery-price">배송료:3000원 (10만원 이상 구매 시 무료)</span>
+        <span class="cart__delivery-price">送料: 3000ウォン (10万ウォン以上の注文は、無料)</span>
     </div>
     <div class="cart-order__btns">
         <button class="btn btn--white btn--mi">選択商品削除</button>
