--- a/src/main/resources/templates/carts/nonmember-cart-list.html
+++ b/src/main/resources/templates/carts/nonmember-cart-list.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <div th:remove="tag" th:replace="~{fragments/head :: head} "></div>
     <script defer src="/js/nonmember-updatecart.js"></script>
-    <title>비회원 장바구니 조회</title>
+    <title>カート照会</title>
 </head>
 <body>
 <header th:replace="~{fragments/login-header :: header}"></header>
