--- a/src/main/resources/templates/orders/member-order-list.html
+++ b/src/main/resources/templates/orders/member-order-list.html
@@ -2,23 +2,23 @@
 <html lang="ko" xmlns:th="http://www.thymeleaf.org" >
 <head>
     <div th:remove="tag" th:replace="~{fragments/head :: head} "></div>
-    <title>PERION - 회원 주문 조회</title>
+    <title>PERION - 会員注文一覧</title>
     <script src="/js/pages/order.js"></script>
 </head>
 <body>
 <header th:replace="~{fragments/login-header :: header}"></header>
 <main class="notice__container">
     <div class="main__container">
-        <h1 class="main__title">나의 주문 목록</h1>
+        <h1 class="main__title">注文一覧</h1>
         <!-- table Ex-->
         <table class="table__client" th:if="${memberOrderDTOList.size()} > 0">
             <thead>
             <tr>
-                <th class="table__no">주문번호</th>
-                <th>상품 정보</th>
-                <th class="table__regtime">주문금액</th>
-                <th class="table__regtime">주문일자</th>
-                <th class="table__answer">주문상태</th>
+                <th class="table__no">注文番号</th>
+                <th>商品情報</th>
+                <th class="table__regtime">注文金額</th>
+                <th class="table__regtime">注文時間</th>
+                <th class="table__answer">注文状態</th>
                 <th class="table__order-status"></th>
             </tr>
             </thead>
@@ -30,14 +30,14 @@
                        th:href="@{/members/{memberNo}/orders/{orderNo}(memberNo=${session.loginMember.memberNo}, orderNo=${memberOrder.memberOrderNo})}">
                     </a>
                 </td>
-                <td class="table__regtime" th:text="${memberOrder.priceSum} + '원'"></td>
+                <td class="table__regtime" th:text="${memberOrder.priceSum} + 'ウォン'"></td>
                 <td class="table__regtime" th:text="${memberOrder.orderTime.toString().substring(0, 10)}"></td>
-                <td class="table__answer" th:text="(${memberOrder.orderStatus} == 1)? '주문 완료': '주문 취소'"></td>
+                <td class="table__answer" th:text="(${memberOrder.orderStatus} == 1)? '注文完了': 'キャンセル'"></td>
                 <td class="table__order-status">
                     <form th:if="${memberOrder.orderStatus} == 1"
                           th:action="@{/members/{memberNo}/orders(memberNo=${session.loginMember.memberNo})}"
                           method="post">
-                        <button class="btn btn--white btn--order">주문 취소</button>
+                        <button class="btn btn--white btn--order">キャンセル</button>
                         <input type="hidden" th:value="${memberOrder.memberOrderNo}" name="orderNo">
                     </form>
                     <div th:if="${memberOrder.orderStatus} == 0" th:text="ㅡㅡ"></div>
@@ -45,7 +45,7 @@
             </tr>
             </tbody>
         </table>
-        <div th:unless="${memberOrderDTOList.size()} > 0">주문 내역이 없습니다.</div>
+        <div th:unless="${memberOrderDTOList.size()} > 0">注文履歴がありません。</div>
     </div>
     <div class="items__page" th:if="${memberOrderDTOList.size()} != 0">
         <span th:if="${pageSettings.page &lt;= 1}">以前</span>
