--- a/src/main/resources/templates/orders/member-order-success.html
+++ b/src/main/resources/templates/orders/member-order-success.html
@@ -2,17 +2,17 @@
 <html lang="ko" xmlns:th="http://www.thymeleaf.org" >
 <head>
     <div th:remove="tag" th:replace="~{fragments/head :: head} "></div>
-    <title>PERION - 주문 완료</title>
+    <title>PERION - 注文完了</title>
 </head>
 <body>
 <header th:replace="~{fragments/login-header :: header}"></header>
 <main class="main__container">
     <img class="main__logo" src="/images/spartan-helmet.svg">
-    <h1 class="main__title after--logo">주문이 무사히 완료되었습니다.</h1>
-    <h2 th:text="'회원님의 주문번호는 ' + ${memberOrderNo} + '입니다.'"></h2>
+    <h1 class="main__title after--logo">注文が完了されました。.</h1>
+    <h2 th:text="'会員様の注文番号は' + ${memberOrderNo} + 'です。'"></h2>
     <div class="cart-order__btns">
-        <button type=button class="btn btn--white btn--mi">홈으로</button>
-        <button type=button class="btn btn--black btn--mi" th:onclick="@{|window.location='/members/${session.loginMember.memberNo}/orders'|}">주문 목록으로</button>
+        <button type=button class="btn btn--white btn--mi">ホームへ</button>
+        <button type=button class="btn btn--black btn--mi" th:onclick="@{|window.location='/members/${session.loginMember.memberNo}/orders'|}">注文一覧へ</button>
     </div>
 </main>
 </body>
