--- a/src/main/resources/templates/orders/nonmember-order-check.html
+++ b/src/main/resources/templates/orders/nonmember-order-check.html
@@ -2,7 +2,7 @@
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <head>
     <div th:remove="tag" th:replace="~{fragments/head :: head} "></div>
-    <title>PERION - 비회원 주문 조회</title>
+    <title>PERION - 非会員注文照会</title>
     <meta name="description" content="20대 선호도 1위 쇼핑몰! 지금 로그인하면 다양한 이벤트 정보를 확인할 수 있습니다.">
     <script type="module" src="/js/pages/member-login.js" defer></script>
     <script src="/js/nonmember-ordercheck.js"></script>
@@ -10,7 +10,7 @@
 <body>
 <header th:replace="~{fragments/header :: header}"></header>
 <main class="main__container">
-    <h1 class="main__title">비회원 주문 조회</h1>
+    <h1 class="main__title">非会員注文確認</h1>
         <label class="label" for="">
             <h5 class="label__title">주문번호*</h5>
             <input id="nonMemberOrderNo" name="nonMemberOrderNoValue" class="input" type="text"/>
@@ -19,7 +19,7 @@
             </div>
         </label>
         <label class="label" for="">
-            <h5 class="label__title">고객명*</h5>
+            <h5 class="label__title">お名前*</h5>
             <input id="nonMemberOrderName" name="nonMemberOrderNameValue" class="input" type="text"/>
             <div class="label__error-container">
 <!--                <h6 class="label__error">에러 메시지를 출력합니다.</h6>-->
@@ -27,7 +27,7 @@
         </label>
         <button type="submit"
                 class="btn btn--black "
-                onclick = "checkNonMemberOrderDetailFromDB();">조회 하기</button>
+                onclick = "checkNonMemberOrderDetailFromDB();">注文確認</button>
 </main>
 </body>
 </html>
