--- a/src/main/resources/templates/orders/nonmember-order-detail-check-test.html
+++ b/src/main/resources/templates/orders/nonmember-order-detail-check-test.html
@@ -2,23 +2,23 @@
 <html lang="ko" xmlns:th="http://www.thymeleaf.org" >
 <head>
     <div th:remove="tag" th:replace="~{fragments/head :: head} "></div>
-    <title>PERION - 비회원 주문 상세 조회</title>
+    <title>PERION - 非会員注文詳細</title>
     <script type="text/javascript" src="/js/pages/order.js" defer></script>
     <script type="text/javascript" src="/js/nonmember-orderdetail.js" defer></script>
 </head>
 <body>
 <header th:replace="~{fragments/header :: header}"></header>
 <main class="main__container section">
-    <h1 class="main__title">고객님의 주문 상품</h1>
+    <h1 class="main__title">お客様の注文商品</h1>
     <table class = "table__client table--2">
         <thead>
         <tr>
-            <th class="cart__price">주문번호</th>
-            <th class="cart__price">주문자</th>
-            <th class="cart__price">수령자명</th>
-            <th class ="order__hp">수령자 연락처</th>
-            <th>수령자 주소</th>
-            <th>주문 상태</th>
+            <th class="cart__price">注文番号</th>
+            <th class="cart__price">注文者名</th>
+            <th class="cart__price">受取人名</th>
+            <th class ="order__hp">受取人の連絡先</th>
+            <th>受取人の住所</th>
+            <th>注文状態</th>
         </tr>
         </thead>
         <tbody>
@@ -28,17 +28,17 @@
             <td class="cart__price" th:text="${session.showNonMemberOrderDetailDTO.getReceiverName()}"></td>
             <td class="order__hp" th:text="${session.showNonMemberOrderDetailDTO.getOrderHp()}"></td>
             <td th:text="${session.showNonMemberOrderDetailDTO.getOrderAddressBasic()}"></td>
-            <td th:text="${session.showNonMemberOrderDetailDTO.getOrderStatus() == 1 ? '주문 완료' : '주문 취소'}"></td>
+            <td th:text="${session.showNonMemberOrderDetailDTO.getOrderStatus() == 1 ? '注文完了' : 'キャンセル'}"></td>
         </tr>
         </tbody>
     </table>
     <table class="table__client table--2">
         <thead>
         <tr>
-            <th class="cart__checkbox">번호</th>
+            <th class="cart__checkbox">番号</th>
             <th colspan="2" style="text-align: center">商品名</th>
-            <th class="cart__price">상품 가격</th>
-            <th class="cart__quantity" style="text-align: center">수량</th>
+            <th class="cart__price">商品価格</th>
+            <th class="cart__quantity" style="text-align: center">数量</th>
         </tr>
         </thead>
         <tbody>
@@ -57,7 +57,7 @@
                     <input th:id="'itemNo_' + ${cartIndex.index}" th:value ="${cartDTO.itemNo}" style="display:none;">
                     -->
                 </td>
-                <td class="cart__price" th:text="${nonMemberOrderDetailDTO.getItemPrice()} + '원'"></td>
+                <td class="cart__price" th:text="${nonMemberOrderDetailDTO.getItemPrice()} + 'ウォン'"></td>
                 <td class="cart__quantity order__quantity" th:text="${nonMemberOrderDetailDTO.getItemQuantity()}"></td>
             </tr>
 
@@ -65,12 +65,12 @@
         </tbody>
     </table>
     <div class="cart-order__btns">
-        <button class="btn btn--black btn--mi btn--home">홈으로</button>
+        <button class="btn btn--black btn--mi btn--home">ホームへ</button>
         <div th:if = "${session.showNonMemberOrderDetailDTO.getOrderStatus() == 1}">
         <button class="btn btn--white btn--mi"
                 th:nonMemberOrderNo = "${session.showNonMemberOrderDetailDTO.getNonMemberOrderNo()}"
                 th:onclick="checkNonMemberOrderCancel(this.getAttribute('nonMemberOrderNo'))"
-        >주문 취소하기</button>
+        >注文キャンセル</button>
         </div>
     </div>
 </main>
