--- a/src/main/resources/templates/orders/nonmember-order.html
+++ b/src/main/resources/templates/orders/nonmember-order.html
@@ -2,7 +2,7 @@
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <head>
     <div th:remove="tag" th:replace="~{fragments/head :: head} "></div>
-    <title>PERION - 비회원 주문</title>
+    <title>PERION - 非会員注文</title>
     <meta name="description" content="20대 선호도 1위 쇼핑몰! 지금 로그인하면 다양한 이벤트 정보를 확인할 수 있습니다.">
     <link rel="stylesheet" href="/css/pages/user/order.css">
     <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
@@ -11,59 +11,59 @@
 <body>
 <header th:replace="~{fragments/header :: header}"></header>
 <main class="main__container">
-    <h1 class="main__title">비회원 주문 정보 입력</h1>
+    <h1 class="main__title">注文情報</h1>
     <form action = "/orders/create" method="post" th:object="${nonMemberOrderAddDTO}">
         <label class="label" for="memberName">
-            <h5 class="label__title">주문자명*</h5>
-            <input id="memberName" name ="nonMemberName" class="input input--lg" type="text" th:field="*{nonMemberName}" placeholder="한글(2~40자)"/>
+            <h5 class="label__title">注文者名*</h5>
+            <input id="memberName" name ="nonMemberName" class="input input--lg" type="text" th:field="*{nonMemberName}" placeholder="ハングル(2~40字)"/>
             <div class="label__error-container">
                 <h6 class="label__error" th:errors="*{nonMemberName}">에러 메시지를 출력합니다.</h6>
             </div>
         </label>
         <label class="label" for="memberHp">
-            <h5 class="label__title">주문자 휴대폰 번호*</h5>
-            <input id="memberHp" name="orderHp" class="input input--lg" type="text" th:field="*{orderHp}" placeholder="-를 제외한 숫자(11자)"/>
+            <h5 class="label__title">注文者携帯番号*</h5>
+            <input id="memberHp" name="orderHp" class="input input--lg" type="text" th:field="*{orderHp}" placeholder="-を除外した数字(11字、010xxxxxxxx)"/>
             <div class="label__error-container">
                 <h6 class="label__error" th:errors="*{orderHp}">에러 메시지를 출력합니다.</h6>
             </div>
         </label>
         <label class="label" for="memberEmail">
-            <h5 class="label__title">주문자 이메일*</h5>
-            <input id="memberEmail" name="orderEmail" class="input input--lg" type="text" th:field="*{orderEmail}" placeholder="영문 및 숫자(최대 50자)" />
+            <h5 class="label__title">注文者メールアドレス*</h5>
+            <input id="memberEmail" name="orderEmail" class="input input--lg" type="text" th:field="*{orderEmail}" placeholder="英文および数字(最大50字)" />
             <div class="label__error-container">
                 <h6 class="label__error" th:errors="*{orderEmail}">에러 메시지를 출력합니다.</h6>
             </div>
         </label>
         <label class="label" for="receiverName">
-            <h5 class="label__title">수령자명*</h5>
-            <input id="receiverName" name ="receiverName" class="input input--lg" type="text" th:field="*{receiverName}" placeholder="한글(2~40자)" />
+            <h5 class="label__title">受取人名*</h5>
+            <input id="receiverName" name ="receiverName" class="input input--lg" type="text" th:field="*{receiverName}" placeholder="ハングル(2~40자)" />
             <div class="label__error-container">
                 <h6 class="label__error" th:errors="*{receiverName}">에러 메시지를 출력합니다.</h6>
             </div>
         </label>
         <label class="label" for="memberPostalCode">
-            <h5 class="label__title">우편번호*</h5>
-            <input id="memberPostalCode" name=orderPostalCode class="input input--mi" type="text" th:field="*{orderPostalCode}" placeholder="클릭 시 자동입력" readonly onclick="execDaumPostalcode()"/>
-            <button type="button" class="btn btn--mi btn--black btn--address"  onclick="execDaumPostalcode()">우편번호 찾기</button>
+            <h5 class="label__title">郵便番号*</h5>
+            <input id="memberPostalCode" name=orderPostalCode class="input input--mi" type="text" th:field="*{orderPostalCode}" placeholder="検索ボタンをクリック" readonly onclick="execDaumPostalcode()"/>
+            <button type="button" class="btn btn--mi btn--black btn--address"  onclick="execDaumPostalcode()">郵便番号検索</button>
             <div class="label__error-container">
                 <h6 class="label__error" th:errors="*{orderPostalCode}">에러 메시지를 출력합니다.</h6>
             </div>
         </label>
         <label class="label" for="memberAddressBasic">
-            <h5 class="label__title">기본 주소*</h5>
-            <input id="memberAddressBasic" name="orderAddressBasic" class="input input--lg" th:field="*{orderAddressBasic}" placeholder="클릭 시 자동입력" type="text" readonly onclick="execDaumPostalcode()"/>
+            <h5 class="label__title">基本住所*</h5>
+            <input id="memberAddressBasic" name="orderAddressBasic" class="input input--lg" th:field="*{orderAddressBasic}" placeholder="クリック時、自動入力" type="text" readonly onclick="execDaumPostalcode()"/>
             <div class="label__error-container">
                 <h6 class="label__error" th:errors="*{orderAddressBasic}">에러 메시지를 출력합니다.</h6>
             </div>
         </label>
         <label class="label" for="memberAddressDetail">
-            <h5 class="label__title">상세 주소</h5>
-            <input id="memberAddressDetail" name="orderAddressDetail" class="input input--lg" th:field="*{orderAddressDetail}" placeholder="한글,영문,숫자(최대 50자)" type="text" />
+            <h5 class="label__title">詳細住所</h5>
+            <input id="memberAddressDetail" name="orderAddressDetail" class="input input--lg" th:field="*{orderAddressDetail}" placeholder="ハングル、英文、数字(最大50字)" type="text" />
             <div class="label__error-container">
                 <h6 class="label__error" th:errors="*{orderAddressDetail}">에러 메시지를 출력합니다.</h6>
             </div>
         </label>
-        <button type="submit" class="btn btn--lg btn--black">주문하기</button>
+        <button type="submit" class="btn btn--lg btn--black">注文をする</button>
     </form>
 </main>
 </body>
